force-app/main/default/objects/LDCT_affiliate__c/LDCT_affiliate__c.object-meta.xml
<CustomObject>
    <label>LDCT affiliate</label>
    <nameField>
        <label>LDCT affiliate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDCT affiliates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>