force-app/main/default/objects/LDCT_affiliate__c/fields/AUMDollars__c.field-meta.xml
<CustomField>
    <fullName>AUMDollars__c</fullName>
    <label>AUM $</label>
    <type>TextArea</type>
</CustomField>