force-app/main/default/objects/LDCT_affiliate__c/fields/AUMEuros__c.field-meta.xml
<CustomField>
    <fullName>AUMEuros__c</fullName>
    <label>AUM €</label>
    <type>TextArea</type>
</CustomField>