force-app/main/default/objects/LDCT_affiliate__c/fields/Date_Of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Entry__c</fullName>
    <label>Date Of Entry</label>
    <type>Date</type>
</CustomField>