force-app/main/default/objects/LDCT_affiliate__c/fields/Founding_Year__c.field-meta.xml
<CustomField>
    <fullName>Founding_Year__c</fullName>
    <label>Founding Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>