force-app/main/default/objects/LDCT_affiliate__c/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <label>Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>