force-app/main/default/objects/LDCT_affiliate__c/fields/LDCT_Project__c.field-meta.xml
<CustomField>
    <fullName>LDCT_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LDCT Project</label>
    <referenceTo>LDCT_Project__c</referenceTo>
    <relationshipLabel>LDCT affiliates</relationshipLabel>
    <relationshipName>LDCT_affiliates</relationshipName>
    <type>Lookup</type>
</CustomField>