force-app/main/default/objects/LDCT_affiliate__c/fields/Legal_Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description_EN__c</fullName>
    <label>Legal Description EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>