force-app/main/default/objects/LDCT_affiliate__c/fields/Logo_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Logo_Reporting__c</fullName>
    <formula>IMAGE( Logo_Reporting_URL__c ,&quot;&quot;, 90,165)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Reporting</label>
    <type>Text</type>
</CustomField>