force-app/main/default/objects/LDCT_affiliate__c/fields/Logo_Reporting_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Reporting_URL__c</fullName>
    <label>Logo Reporting URL</label>
    <type>Url</type>
</CustomField>