force-app/main/default/objects/LDCT_affiliate__c/fields/Logo_SVG_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_SVG_URL__c</fullName>
    <label>Logo SVG URL</label>
    <type>Url</type>
</CustomField>