force-app/main/default/objects/LDCT_affiliate__c/fields/Long_Description_IT__c.field-meta.xml
<CustomField>
    <fullName>Long_Description_IT__c</fullName>
    <label>Long Description IT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>