force-app/main/default/objects/LDCT_affiliate__c/fields/Share_capital_date__c.field-meta.xml
<CustomField>
    <fullName>Share_capital_date__c</fullName>
    <label>Share capital date</label>
    <type>Date</type>
</CustomField>