force-app/main/default/objects/LDCT_affiliate__c/fields/Share_capital_dollar__c.field-meta.xml
<CustomField>
    <fullName>Share_capital_dollar__c</fullName>
    <label>Share capital dollar</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>