force-app/main/default/objects/LDCT_affiliate__c/fields/Share_capital_euro__c.field-meta.xml
<CustomField>
    <fullName>Share_capital_euro__c</fullName>
    <label>Share capital euro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>