force-app/main/default/objects/LDCT_affiliate__c/fields/Short_Description_SP__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_SP__c</fullName>
    <label>Short Description SP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>